{
    "version": 1,
    "name": "MobileInput",
    "maps": [
        {
            "name": "Game",
            "id": "2960e9d9-6ee3-47b8-b8ea-8b56508a7012",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "127ddde8-aa91-4cae-be7e-3734c86aff18",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "ea9465a0-517e-419f-83e8-c85ebd7b4c7e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "touch0",
                    "type": "Value",
                    "id": "1cd75bf6-0dda-4b2c-8580-be47cee5c8ca",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "touch1",
                    "type": "Value",
                    "id": "969708bd-9164-4449-aa6d-135e40d9669d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fd03f11b-c430-46fc-9f63-67c7f5fd1b79",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "604a8515-f519-4d2f-8ea9-247104eeab9f",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8453b36-1cf3-4528-9f07-829630834bc7",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10edad00-18f4-4f03-a155-8f13c8864708",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touch0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0d969bf-3b15-4bac-9346-7ad61f16841a",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touch1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}